# libsylph

./: .cproject  .gitattributes  .gitignore  .project  AUTHORS  BRANCH  BRANCH-DESCRIPTION  CMakeLists.txt  COPYING  Doxyfile  README  README-DEPS  README.md  Sylph.pc.in  SylphConfig.cmake.in  SylphConfigVersion.cmake.in  developers.sh  gccver.sh  makedeps.ftr  makedeps.hdr  makedeps.sh  sylph.pc.in
.vimproject/: vimrc
.vimproject/plugins/: focb.vim
.vimproject/snippets/: cpp.snippets
.vimproject/syntax/: gtest.vim
.vimproject/tpl/: core.tpl.h  test.tpl.cpp  tpl.cpp  tpl.h
cmake/: DetectClangFeatures.cmake  DetectClangVersion.cmake  DetectGccVersion.cmake  EnableCxx11.cmake
contrib/: README
contrib/ide/astyle/: astyle
contrib/ide/vim/: README
contrib/ide/vim/ftplugin/: cpp.vim
contrib/ide/vim/snippets/: cpp.snippets
contrib/ide/vim/syntax/: cpp11.vim  libsylph.vim
docs/: _any_8h-source.html  _application_8h-source.html  _array_8h-source.html  _array_iterator_8h-source.html  _boostdefs_8h-source.html  _collection_8h-source.html  _comparable_8h-source.html  _comparable_8h.html  _dictionary_8h-source.html  _dictionary_iterator_8h-source.html  _equals_8h-source.html  _exception_8h-source.html  _file_8h-source.html  _file_filter_8h-source.html  _file_ops_8h-source.html  _file_type_8h-source.html  _guess_o_s_8h-source.html  _hash_8h-source.html  _hashable_8h-source.html  _iterable_8h-source.html  _iterator_8h-source.html  _library_8h-source.html  _mac_o_s_app_self_8h-source.html  _mylib_8h-source.html  _o_s_8h-source.html  _object_8h-source.html  _random_8h-source.html  _string_8h-source.html  _sylph_8h-source.html  _util_8h-source.html  _vector_8h-source.html  _vector_iterator_8h-source.html  annotated.html  class_sylph_1_1_core_1_1_array-members.html  class_sylph_1_1_core_1_1_array.html  class_sylph_1_1_core_1_1_array_iterator-members.html  class_sylph_1_1_core_1_1_array_iterator.html  class_sylph_1_1_core_1_1_exception-members.html  class_sylph_1_1_core_1_1_exception.html  class_sylph_1_1_core_1_1_iterator-members.html  (+19 more)
docs/concepts/: README  concepts.h  crypto.h  functions.h  sgiconcepts.h
docs/html/: _any_8h-source.html  _app_type_8h-source.html  _application_8h-source.html  _array_8h-source.html  _array_iterator_8h-source.html  _bool_convertible_8h-source.html  _boostdefs_8h-source.html  _buffered_input_stream_8h-source.html  _buffered_output_stream_8h-source.html  _byte_buffer_8h-source.html  _collection_8h-source.html  _common_8h-source.html  _common_8h.html  _common_8h__dep__incl.map  _common_8h__dep__incl.md5  _common_8h__incl.map  _common_8h__incl.md5  _comparable_8h-source.html  _comparable_8h.html  _comparable_8h__dep__incl.map  _comparable_8h__dep__incl.md5  _comparable_8h__incl.map  _comparable_8h__incl.md5  _current_function_8h-source.html  _debug_8h-source.html  _deserializer_8h-source.html  _dictionary_8h-source.html  _dictionary_iterator_8h-source.html  _equals_8h-source.html  _exception_8h-source.html  _file_8h-source.html  _file_filter_8h-source.html  _file_i_o_8h-source.html  _file_input_stream_8h-source.html  _file_ops_8h-source.html  _file_output_stream_8h-source.html  _file_type_8h-source.html  _foreach_8h-source.html  _guess_o_s_8h-source.html  _hash_8h-source.html  (+289 more)
docs/incl/: DoxygenLayout.xml  doxygen.css  footer.html  header.html
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
src/: .devctl  CMakeLists.txt  SourcesList.txt  Sylph.cpp  Sylph.h  SylphMain.h  csylph.h
src/Math/: internal_base.h
src/Sylph/: Math.h
src/Sylph/AppServ/IO/: FileOps.h
src/Sylph/Core/: Any.h  AppType.h  Application.cpp  Application.h  Array.cpp  Array.h  Array2d.h  ArrayIterator.cpp  ArrayIterator.h  BitField.h  BoolConvertible.h  Boostdefs.h  ByteBuffer.cpp  ByteBuffer.h  Collection.h  Common.h  Comparable.h  CurrentFunction.h  Cygwin.h  Debug.h  Dictionary.cpp  Dictionary.h  DictionaryIterator.cpp  DictionaryIterator.h  Equals.cpp  Equals.h  Exception.h  File.cpp  File.h  Foreach.h  Function.h  Hash.cpp  Hash.h  HashIterator.h  HashMap.cpp  HashMap.h  HashSet.h  Hashable.h  I18N.h  In.h  (+39 more)
src/Sylph/Core/IO/: FileFilter.h  FileType.h
src/Sylph/Core/Serialization/: Deserializer.h  Key.h  Serialization.h  Serializer.h
src/Sylph/IO/: BufferedInputStream.cpp  BufferedInputStream.h  BufferedOutputStream.cpp  BufferedOutputStream.h  FileIO.h  FileInputStream.cpp  FileInputStream.h  FileOutputStream.cpp  FileOutputStream.h  InputStream.h  OutputStream.h  PrintWriter.cpp  PrintWriter.h  ScanReader.h
src/Sylph/Math/: Angle.h  Complex.h  Frac.h  FracHelper.h  Functions.cpp  Functions.h  Line.h  Math.h  Matrix.h  Plane.h  Quaternion.h  TrigFunctions.h  Vector.h  internal_base.h
src/Sylph/OS/: AllCompilers.h  Clang.h  Dll.h  Gcc.h  GccLike.h  GuessCompiler.h  GuessOS.h  Linux.cpp  Linux.h  LinuxBundleAppSelf.cpp  LinuxBundleAppSelf.h  LinuxFHSAppSelf.cpp  LinuxFHSAppSelf.h  MacOSAppSelf.cpp  MacOSAppSelf.h  MacOSFHSAppSelf.cpp  MacOSFHSAppSelf.h  NoCxx11.h  OS.h  OSX.cpp  OSX.h  SharedObject.h  Unix.cpp  Unix.h  UnknownCompiler.h  Windows.cpp  Windows.h  WindowsAppSelf.cpp  WindowsAppSelf.h
src/csylph/: csylph.c  csylph.cpp  csylph.h
test/: .devctl  Arguments.cpp  Array.cpp  Array.tst  Array2d.cpp  ByteBuffer.cpp  CMakeLists.txt  File.cpp  Function.cpp  HashMap.cpp  HelloWorld.cpp  In.cpp  List.cpp  PointerManager.cpp  SourcesList.txt  String.cpp  String.tst  SylphTest.h  ThisApp.cpp  Traits.cpp  Vector.cpp  main.cpp  mktest.pl
test/Core/: Array.cpp  BitField.cpp  ByteBuffer.cpp  Collection.h  File.cpp  Function.cpp  HashMap.cpp  In.cpp  List.cpp  MockCollection.h  PointerManager.cpp  String.cpp  Traits.cpp  Vector.cpp
test/Math/: Angle.cpp  Complex.cpp  Frac.cpp  Functions.cpp  Matrix.cpp  Quaternion.cpp  Vector.cpp
test/OS/: Compiler.cpp
